aggiornato ultimo incontro

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -42,20 +42,16 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>ZoeFX Web Framework</h1>
-                <h2>data: 29/10/2014</h2>
-                <p class="lead">Relatore: Tiziano Lattisi</p>
-                <!--
-                    <h1>Java &amp; Eclipse &amp; Tomcat Enterprise Edition</h1>
-                    <p class="lead">Relatore: Nicola Pedot</p>
-                    <p class="lead">In questo incontro presenteremo le API di programmazione
-                      dell'ultima versione ufficiale delle specifiche Java Enterprise e
-                      vedremo insieme come costruire degli esempi JEE con Eclipse Kepler e
-                      Apache TomEE.</p>
-                    <p class="lead">Luogo: Aula Garda, Facoltà Scienze Matematiche Fisiche
-                      Naturali, Povo, Via Sommarive 15, Trento.</p>
-                -->
-                <p class="lead">Orario: 19:30 - 21:30</p>
+                <h1>Phonegap 3</h1>
+                <h2>data: da definirsi</h2>
+                <p class="lead">Relatore: Mirco Attocchi</p>
+
+                <p class="lead">Mirco ci parlerà di <a href="http://phonegap.com/">PhoneGap 3</a>, mostrando le ultime novità del framework.</p>
+                <p class="lead">PhoneGap è un framework cross-platform mobile che consente di sviluppare delle applicazioni native attraverso l’utilizzo di tecnologie web quali HTML, CSS e JavaScript. In altre parole, PhoneGap consente di "tradurre" le web application in mobile application.</p>
+
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/qgkwc6v2ierv6fdh" role="button">Iscriviti</a></p>
+                
+                <p class="lead">Orario: da definirsi</p>
                 <p class="lead">Lingua: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
@@ -69,8 +65,6 @@
                     pizza.</p>
                 <p class="lead">Post: a seguire per chi desidera approfondire o
                     chiaccherare il gruppo si ferma in una pizzeria vicina.</p>
-
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/kiq7kr73y7p3swyf" role="button">Iscriviti</a></p>
 
             </div>
             <!-- Site footer -->
