--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>ZoeFX Web Framework</h1>
-                <h3>data: 29/10/2014</h3>
-                <h3>Relatore: Tiziano Lattisi</h3>    
-                <p class="lead"><a href="http://www.lattisi.com/blog/zoefx/">ZFX</a> è un framework che implementa il pattern MVC fornendo un modello e un controller ispettivi, dando allo sviluppatore la possibilità di concentrarsi solo sulla vista e sulla struttura del dato.</p>   
-                <p class="lead">Nello specifico lo sviluppatore è chiamato unicamente a definire le classi entità che rappresentano lo stato dell’applicazione e disegnare la UI tramite il designer di JavaFX.</p>
+                <h1>Phonegap 3</h1>
+                <h3>data: da definirsi</h3>
+                <h3>Relatore: Mirco Attocchi</h3>
+                <p class="lead">Mirco ci parlerà di <a href="http://phonegap.com/">PhoneGap 3</a>, mostrando le ultime novità del framework.</p>
+                <p class="lead">PhoneGap è un framework cross-platform mobile che consente di sviluppare delle applicazioni native attraverso l’utilizzo di tecnologie web quali HTML, CSS e JavaScript. In altre parole, PhoneGap consente di "tradurre" le web application in mobile application.</p>
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
 
