--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h1>Phonegap 3</h1>
-                <h3>data: da definirsi</h3>
+                <h3>data: 3 Dicembre 2014</h3>
                 <h3>Relatore: Mirco Attocchi</h3>
                 <p class="lead">Mirco ci parlerà di <a href="http://phonegap.com/">PhoneGap 3</a>, mostrando le ultime novità del framework.</p>
                 <p class="lead">PhoneGap è un framework cross-platform mobile che consente di sviluppare delle applicazioni native attraverso l’utilizzo di tecnologie web quali HTML, CSS e JavaScript. In altre parole, PhoneGap consente di "tradurre" le web application in mobile application.</p>
