--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -42,16 +42,27 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>Phonegap 3</h1>
-                <h2>data: 3 Dicembre 2014</h2>
-                <p class="lead">Relatore: Mirco Attocchi</p>
+                <h1>Write java, run javascript</h1>
+                <h2>create enterprise html5 apps without “undefined” bugs</h2>
+                <h2>data: (doodle in corso)</h2>
+                <p class="lead">Relatore: Davide Montesin</p>
 
-                <p class="lead">Mirco ci parlerà di <a href="http://phonegap.com/">PhoneGap 3</a>, mostrando le ultime novità del framework.</p>
-                <p class="lead">PhoneGap è un framework cross-platform mobile che consente di sviluppare delle applicazioni native attraverso l’utilizzo di tecnologie web quali HTML, CSS e JavaScript. In altre parole, PhoneGap consente di "tradurre" le web application in mobile application.</p>
+                <p class="lead">Una chiaccherata sulla mia esperienza personale con i due linguaggi,
+                sul perché e in quali casi preferisco usare java (convertito poi in javascript)
+                per sviluppare applicazioni html5 (e dormire sereno la notte).
 
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/qgkwc6v2ierv6fdh" role="button">Iscriviti</a></p>
+                <p class="lead">Verranno mostrate alcune app di esempio realizzate e come fare il binding html / java con <a href="http://www.gwtproject.org/">gwt</a>.</p>
+
+                <p class="lead">Parleremo di java come linguaggio per diverse piattaforme e quindi riuso del codice: model, business logic, client/server, android.</p>
+
+                <p class="lead">Come è fatta una jvm e come è possibile implementarla in javascript
+                in modo piuttosto semplice?</p>
+
+                <p class="lead">Come è possibile usare queste nuove tecnologie senza dover re-imparare tutto?</p>
+
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/qdidz6k9d387p27s" role="button">Iscriviti</a></p>
                 
-                <p class="lead">Orario: 19:30</p>
+                <!--<p class="lead">Orario: 19:30</p>-->
                 <p class="lead">Lingua: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
