--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>Phonegap 3</h1>
-                <h3>data: 3 Dicembre 2014</h3>
-                <h3>Relatore: Mirco Attocchi</h3>
-                <p class="lead">Mirco ci parlerà di <a href="http://phonegap.com/">PhoneGap 3</a>, mostrando le ultime novità del framework.</p>
-                <p class="lead">PhoneGap è un framework cross-platform mobile che consente di sviluppare delle applicazioni native attraverso l’utilizzo di tecnologie web quali HTML, CSS e JavaScript. In altre parole, PhoneGap consente di "tradurre" le web application in mobile application.</p>
+                <h1>Write java, run javascript</h1>
+                <h3>create enterprise html5 apps without “undefined” bugs</h3>
+                <h3>data: (doodle in corso)</h3>
+                <h3>Relatore: Davide Montesin</h3>
+                <p class="lead">Una chiaccherata sulla mia esperienza personale con i due linguaggi,sul perché e in quali casi preferisco usare java (convertito poi in javascript)
+                per sviluppare applicazioni html5 (e dormire sereno la notte).</p>
+                <p class="lead">Come è fatta una Java Virtual Machine e come è possibile implementarla in javascript in modo piuttosto semplice?</p>
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
 
