fissata la data del prossimo incontro

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2>Prossimo incontro</h2>
                 <h1>Write java, run javascript</h1>
                 <h3>create enterprise html5 apps without “undefined” bugs</h3>
-                <h3>data: (doodle in corso)</h3>
+                <h3>data: 14/01/2015</h3>
                 <h3>Relatore: Davide Montesin</h3>
                 <p class="lead">Una chiaccherata sulla mia esperienza personale con i due linguaggi,sul perché e in quali casi preferisco usare java (convertito poi in javascript)
                 per sviluppare applicazioni html5 (e dormire sereno la notte).</p>
