--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -44,7 +44,7 @@
                 <h2>Prossimo incontro</h2>
                 <h1>Write java, run javascript</h1>
                 <h2>create enterprise html5 apps without “undefined” bugs</h2>
-                <h2>data: (doodle in corso)</h2>
+                <h2>data: 14/01/2015</h2>
                 <p class="lead">Relatore: Davide Montesin</p>
 
                 <p class="lead">Una chiaccherata sulla mia esperienza personale con i due linguaggi,
@@ -62,21 +62,21 @@
 
                 <p><a class="btn btn-lg btn-success" href="http://doodle.com/qdidz6k9d387p27s" role="button">Iscriviti</a></p>
                 
-                <!--<p class="lead">Orario: 19:30</p>-->
-                <p class="lead">Lingua: italiana</p>
+                <p class="lead"><b>Orario</b>: 19:30-21:30</p>
+                <p class="lead"><b>Lingua</b>: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
                 -->
                 <!--                <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>-->
-                <p class="lead">Luogo: <a href="http://www.semanticvalley.it/" target="_blank">Semantic Valley</a>, Piazza Manci 17 Povo (<a href="https://www.google.it/maps/place/46%C2%B003%2756.7%22N+11%C2%B009%2719.0%22E/@46.065747,11.155268,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">ingresso sul retro</a>).</p>
+                <p class="lead"><b>Luogo</b>: <a href="http://www.semanticvalley.it/" target="_blank">Semantic Valley</a>, Piazza Manci 17 Povo (<a href="https://www.google.it/maps/place/46%C2%B003%2756.7%22N+11%C2%B009%2719.0%22E/@46.065747,11.155268,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">ingresso sul retro</a>).</p>
                 <p>Ci si trova qualche minuto prima al <a href="https://www.google.it/maps/place/46%C2%B003%2756.8%22N+11%C2%B009%2717.5%22E/@46.065766,11.154871,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">parcheggio della banca</a>
                 </p>
-                <p class="lead">Iscrizione: è sufficiente iscriversi al doodle. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>
+                <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi al doodle. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>
                 <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
-                <p class="lead">Costo: da tradizione i partecipanti sono invitati a
+                <p class="lead"><b>Costo</b>: da tradizione i partecipanti sono invitati a
                     pagare un euro, versato direttamente al relatore per offrirgli la
                     pizza.</p>
-                <p class="lead">Post: a seguire, per chi desidera approfondire o
+                <p class="lead"><b>Post</b>: a seguire, per chi desidera approfondire o
                     chiaccherare, il gruppo si ferma in una pizzeria vicina.</p>
 
             </div>
