fissata la data del prossimo incontro

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -73,7 +73,7 @@
                 </p>
                 <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi al doodle. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>
                 <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
-                <p class="lead"><b>Costo</b>: da tradizione i partecipanti sono invitati a
+                <p class="lead"><b>Costo</b>: 1€; da tradizione i partecipanti sono invitati a
                     pagare un euro, versato direttamente al relatore per offrirgli la
                     pizza.</p>
                 <p class="lead"><b>Post</b>: a seguire, per chi desidera approfondire o
