--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -41,28 +41,23 @@
             </div>
             <!-- Jumbotron -->
             <div class="jumbotron">
-                <h2>Prossimo incontro</h2>
-                <h1>Write java, run javascript</h1>
-                <h2>create enterprise html5 apps without “undefined” bugs</h2>
-                <h2>data: 14/01/2015</h2>
-                <p class="lead">Relatore: Davide Montesin</p>
+                <h3>Prossimo incontro</h3>
+                <h2>Licenze software: cosa bisogna sapere?!</h2>
+                <h3>data: <a href="http://doodle.com/e7rbng5armhxmfmh" role="button">da definirsi</a></h3>
+                <p class="lead"><b>Relatori</b>: Maurizio Napolitano, Cristian Consonni</p>
 
-                <p class="lead">Una chiaccherata sulla mia esperienza personale con i due linguaggi,
-                sul perché e in quali casi preferisco usare java (convertito poi in javascript)
-                per sviluppare applicazioni html5 (e dormire sereno la notte).
+                <p class="lead">Maurizio Napolitano (Digital Commons Lab FBK) e Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegheranno brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
+                <ul style="text-align: left;display: inline-block;">
+                    <li>famiglie di licenze open (liberali, forti e deboli)</li>
+                    <li>gestione del copyright (centralizzato, federato)</li>
+                </ul>
+                </p>
 
-                <p class="lead">Verranno mostrate alcune app di esempio realizzate e come fare il binding html / java con <a href="http://www.gwtproject.org/">gwt</a>.</p>
+                <p class="lead">Il resto dell'incontro sarà impostato come un dibattito aperto in cui i partecipanti potranno esporre i propri dubbi sull'argomento e condividere le proprie esperienze.</p>
 
-                <p class="lead">Parleremo di java come linguaggio per diverse piattaforme e quindi riuso del codice: model, business logic, client/server, android.</p>
-
-                <p class="lead">Come è fatta una jvm e come è possibile implementarla in javascript
-                in modo piuttosto semplice?</p>
-
-                <p class="lead">Come è possibile usare queste nuove tecnologie senza dover re-imparare tutto?</p>
-
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/qdidz6k9d387p27s" role="button">Iscriviti</a></p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/e7rbng5armhxmfmh" role="button">Iscriviti</a></p>
                 
-                <p class="lead"><b>Orario</b>: 19:30-21:30</p>
+                <!--<p class="lead"><b>Orario</b>: da definirsi</p>-->
                 <p class="lead"><b>Lingua</b>: italiana</p>
                 <!--
                        <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
