--- a/index.html
+++ b/index.html
@@ -54,13 +54,17 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h1>Write java, run javascript</h1>
-                <h3>create enterprise html5 apps without “undefined” bugs</h3>
-                <h3>data: 14/01/2015</h3>
-                <h3>Relatore: Davide Montesin</h3>
-                <p class="lead">Una chiaccherata sulla mia esperienza personale con i due linguaggi,sul perché e in quali casi preferisco usare java (convertito poi in javascript)
-                per sviluppare applicazioni html5 (e dormire sereno la notte).</p>
-                <p class="lead">Come è fatta una Java Virtual Machine e come è possibile implementarla in javascript in modo piuttosto semplice?</p>
+                <h1>Licenze software: cosa bisogna sapere?!</h1>
+                <h3>data: <a href="http://doodle.com/e7rbng5armhxmfmh" role="button">da definirsi</a></h3>
+                <h3>Relatori: Maurizio Napolitano, Cristian Consonni</h3>
+                <p class="lead">Maurizio Napolitano (Digital Commons Lab FBK) e Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegheranno brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
+                <ul style="text-align: left;display: inline-block;">
+                    <li>famiglie di licenze open (liberali, forti e deboli)</li>
+                    <li>gestione del copyright (centralizzato, federato)</li>
+                </ul>
+                </p>
+
+                <p class="lead">Il resto dell'incontro sarà impostato come un dibattito aperto in cui i partecipanti potranno esporre i propri dubbi sull'argomento e condividere le proprie esperienze.</p>
                 <p><a class="btn btn-lg btn-success" href="incontri-prossimo.html" role="button">Partecipa</a></p>
             </div>
 
