fissata la data dell'incontro di Febbraio

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,10 +43,11 @@
             <div class="jumbotron">
                 <h3>Prossimo incontro</h3>
                 <h2>Licenze software: cosa bisogna sapere?!</h2>
-                <h3>data: <a href="http://doodle.com/e7rbng5armhxmfmh" role="button">da definirsi</a></h3>
-                <p class="lead"><b>Relatori</b>: Maurizio Napolitano, Cristian Consonni</p>
+                <h3>data: 18 Febbraio</h3>
+                <h3>orario: 18:30 - 20:30</h3>
+                <p class="lead"><b>Relatore</b>: Cristian Consonni</p>
 
-                <p class="lead">Maurizio Napolitano (Digital Commons Lab FBK) e Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegheranno brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
+                <p class="lead">Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegherà brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
                 <ul style="text-align: left;display: inline-block;">
                     <li>famiglie di licenze open (liberali, forti e deboli)</li>
                     <li>gestione del copyright (centralizzato, federato)</li>
