--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h1>Licenze software: cosa bisogna sapere?!</h1>
-                <h3>data: <a href="http://doodle.com/e7rbng5armhxmfmh" role="button">da definirsi</a></h3>
-                <h3>Relatori: Maurizio Napolitano, Cristian Consonni</h3>
-                <p class="lead">Maurizio Napolitano (Digital Commons Lab FBK) e Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegheranno brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
+                <h3>data: 18 Febbraio</h3>
+                <h3>data: 18:30 - 20:30</h3>
+                <h3>Relatore: Cristian Consonni</h3>
+                <p class="lead">Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegherà brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
                 <ul style="text-align: left;display: inline-block;">
                     <li>famiglie di licenze open (liberali, forti e deboli)</li>
                     <li>gestione del copyright (centralizzato, federato)</li>
