--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -45,9 +45,9 @@
                 <h2>Licenze software: cosa bisogna sapere?!</h2>
                 <h3>data: 18 Febbraio</h3>
                 <h3>orario: 18:30 - 20:30</h3>
-                <p class="lead"><b>Relatore</b>: Cristian Consonni</p>
+                <p class="lead"><b>Relatori</b>: Cristian Consonni, Maurizio Napolitano</p>
 
-                <p class="lead">Cristian Consonni (PhD student UniTN, Wikimedia Italia) spiegherà brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
+                <p class="lead">Cristian Consonni (PhD student UniTN, Wikimedia Italia) e Maurizio Napolitano (Digital Commons Lab, FBK) spiegheranno brevemente (30 min) cosa dovrebbe sapere un professionista riguardo le licenze software. In particolare:
                 <ul style="text-align: left;display: inline-block;">
                     <li>famiglie di licenze open (liberali, forti e deboli)</li>
                     <li>gestione del copyright (centralizzato, federato)</li>
