--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,8 +43,8 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h2>HATEOAS e angularjs per rinnovare il sito del JUG</h2>
-                <h3>data: <a href="http://doodle.com/ai4brshhbn7in6m2">doodle in corso</a></h3>
-                <!--<h3>data: 18:30 - 20:30</h3>-->
+                <h3>data: 19 Marzo 2015</h3>
+                <h3>orario: 19:00 - 21:00</h3>
                 <h3>Relatori: Tiziano Lattisi, Riccardo Tasso</h3>
                 <p class="lead">Riccardo e Tiziano hanno lavorato a un'applicazione web che ha permesso di sperimentare due tecnologie molto interessanti: <a href="http://en.wikipedia.org/wiki/HATEOAS">HATEOAS</a> e il noto framework javascript <a href="https://angularjs.org/">angularjs</a>.
                 </p>
