--- a/index.html
+++ b/index.html
@@ -54,22 +54,13 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h2>HATEOAS e angularjs per rinnovare il sito del JUG</h2>
-                <h3>data: 19 Marzo 2015</h3>
-                <h3>orario: 19:00 - 21:00</h3>
-                <h3>Relatori: Tiziano Lattisi, Riccardo Tasso</h3>
-                <p class="lead">Riccardo e Tiziano hanno lavorato a un'applicazione web che ha permesso di sperimentare due tecnologie molto interessanti: <a href="http://en.wikipedia.org/wiki/HATEOAS">HATEOAS</a> e il noto framework javascript <a href="https://angularjs.org/">angularjs</a>.
-                </p>
-                <p class="lead">L'obiettivo è stato quello di facilitare la gestione degli eventi del nostro sito JUG-TAAS, che attualmente è fatto in HTML statico. Nell'incontro si parlerà:
-                <ul style="text-align: left;display: inline-block;">
-                    <li>del metodo di coordinamento, tramite github</li>
-                    <li>dell'hosting usato per la parte java: rhcloud</li>
-                    <li>dell'implementazione del backend basato sui principi HATEOAS</li>
-                    <li>dell'implementazione del frontend con angularjs e di come dialoga con il backend</li>
-                </ul>
-                </p>
-
-                <p class="lead">Inoltre verranno affrontati i prossimi possibili sviluppi tra cui, per esempio, l'internazionalizzazione e la gestione dei profili utente</p>
+                <h2>Strumenti di build automation: Maven e Gradle</h2>
+                <h3>data: <a href="http://doodle.com/xtmzxcih5kaqv4g8">doodle in corso</a></h3>
+                <!--<h3>orario: 19:00 - 21:00</h3>-->
+                <h3>Relatori: Nicola Pedotti, Riccardo Tasso</h3>
+                <p class="lead">In questo talk verranno introdotti i concetti base per comprendere due tra i più diffusi e apprezzati tool di build automation nel mondo Java: Maven e Gradle.</p>
+                <p class="lead">Verrà spiegato come configurare un progetto e descriverlo attraverso dei metadati, l'inclusione delle dipendenze e l'attivazione di funzionalità custom tramite plugin.</p>
+                <p class="lead">Verrà infine mostrato il processo di pubblicazione di un progetto su Maven Central.</p>
             </div>
 
             <!-- Example row of columns -->
