--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h2>Strumenti di build automation: Maven e Gradle</h2>
-                <h3>data: <a href="http://doodle.com/xtmzxcih5kaqv4g8">doodle in corso</a></h3>
-                <!--<h3>orario: 19:00 - 21:00</h3>-->
+                <h3>data: 29 Aprile</h3>
+                <h3>orario: 18:30 - 20:30</h3>
                 <h3>Relatori: Nicola Pedotti, Riccardo Tasso</h3>
                 <p class="lead">In questo talk verranno introdotti i concetti base per comprendere due tra i più diffusi e apprezzati tool di build automation nel mondo Java: Maven e Gradle.</p>
                 <p class="lead">Verrà spiegato come configurare un progetto e descriverlo attraverso dei metadati, l'inclusione delle dipendenze e l'attivazione di funzionalità custom tramite plugin.</p>
