--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h2>Strumenti di build automation: Maven e Gradle</h2>
                 <h3>data: 29 Aprile</h3>
                 <h3>orario: 18:30 - 20:30</h3>
-                <h3>Relatori: Nicola Pedotti, Riccardo Tasso</h3>
+                <h3>Relatori: Nicola Pedot, Riccardo Tasso</h3>
                 <p class="lead">In questo talk verranno introdotti i concetti base per comprendere due tra i più diffusi e apprezzati tool di build automation nel mondo Java: Maven e Gradle.</p>
                 <p class="lead">Verrà spiegato come configurare un progetto e descriverlo attraverso dei metadati, l'inclusione delle dipendenze e l'attivazione di funzionalità custom tramite plugin.</p>
                 <p class="lead">Verrà infine mostrato il processo di pubblicazione di un progetto su Maven Central.</p>
