--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="masthead">
 
                 <!-- Navigation bar -->
-                <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo" /> Java User Group Trento</h4>
+                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trento</h4>
                 <ul class="nav nav-justified">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li ><a href="incontri.html">Incontri</a></li>
