--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -28,7 +28,7 @@
         <div class="container">
             <!-- Navigation bar -->
             <div class="masthead">
-                <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo"> Java
+                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo"> Java
                     User Group Trento</h4>
                 <ul class="nav nav-justified">
                     <li><a href="index.html">Home</a></li>
