--- a/iscrizione.html
+++ b/iscrizione.html
@@ -35,7 +35,7 @@
 
             <!-- Navigation bar -->
             <div class="masthead">
-                <h4 class="text-masthead"><img src="img/logojugtn.gif" alt="Logo" /> Java User Group Trento</h4>
+                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trento</h4>
                 <ul class="nav nav-justified">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="incontri.html">Incontri</a></li>
