--- a/incontri-2013.html
+++ b/incontri-2013.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="img/favicon.png">
 
-        <title>JUG Trento - Incontri</title>
+        <title>JUG Trentino-Alto Adige/Südtirol - Incontri</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
             <!-- Navigation bar -->
             <div class="masthead">
-                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trento</h4>
+                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trentino-Alto Adige/Südtirol</h4>
                 <ul class="nav nav-justified">
                     <li ><a href="index.html">Home</a></li>
                     <li class="active"><a href="incontri.html">Incontri</a></li>
@@ -174,7 +174,7 @@
 
             <!-- Site footer -->
             <div class="footer">
-                <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
+                <p>JUG Trentino-Alto Adige/Südtirol è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
             </div>
 
 
