--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="img/favicon.png">
 
-        <title>JUG Trento - Home</title>
+        <title>JUG Trentino-Alto Adige/Südtirol - Home</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
@@ -38,7 +38,7 @@
             <div class="masthead">
 
                 <!-- Navigation bar -->
-                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trento</h4>
+                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trentino-Alto Adige/Südtirol</h4>
                 <ul class="nav nav-justified">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li ><a href="incontri.html">Incontri</a></li>
@@ -85,7 +85,7 @@
 
             <!-- Site footer -->
             <div class="footer">
-                <p>JugTrento è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
+                <p>JUG Trentino-Alto Adige/Südtirol è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
             </div>
 
         </div> <!-- /container -->
