--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -42,22 +42,16 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h2>Strumenti di build automation: Maven e Gradle</h2>
-                <h3>data: 29 Aprile</h3>
-                <h3>orario: 18:30 - 20:30</h3>
-                <h3>Relatori: Nicola Pedot, Riccardo Tasso</h3>
-                <p class="lead">In questo talk verranno introdotti i concetti base per comprendere due tra i più diffusi e apprezzati tool di build automation nel mondo Java: Maven e Gradle.</p>
-                <p class="lead">Verrà spiegato come configurare un progetto e descriverlo attraverso dei metadati, l'inclusione delle dipendenze e l'attivazione di funzionalità custom tramite plugin.</p>
-                <p class="lead">Verrà infine mostrato il processo di pubblicazione di un progetto su Maven Central.</p>
-
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/xtmzxcih5kaqv4g8" role="button">Iscriviti</a></p>
+                <h2>Search Engine: Elastic Search</h2>
+                <h3>data: <a href="http://doodle.com/ut4cu3vvw6vscv72">doodle in corso</a></h3>
+                <!--<h3>orario: 18:30 - 20:30</h3>-->
+                <h3>Relatore: Nicola Vitucci</h3>
+                <p class="lead">Nicola Vitucci parlerà di <a href="">Elastic Search</a>, un progetto molto interessante scritto prevalentemente in Java e nato come diretto concorrente di Apache SOLR. Il tema è quello dei motori di ricerca e delle text analytics, anche se addirittura alcuni considerano lucene (il papà di Elastic Search) <a href="http://blog.parsely.com/post/1691/lucene/">uno dei primi data Store NoSQL</a>.</p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/ut4cu3vvw6vscv72" role="button">Iscriviti</a></p>
                 
                 <!--<p class="lead"><b>Orario</b>: da definirsi</p>-->
                 <p class="lead"><b>Lingua</b>: italiana</p>
-                <!--
-                       <p class="lead">Luogo: Università Scienze Matematiche Fisiche Naturali di Povo, piano DISI, aula Molveno</p>
-                -->
-                <!--                <p class="lead">Luogo: <a href="http://international.unitn.it/mim/clab-trento">contamination lab</a> (<a href="https://mapsengine.google.com/map/edit?mid=z-tg36asRqHM.kdI_6cp3ssuE" target="_blank">mappa</a>)</p>-->
+               
                 <p class="lead"><b>Luogo</b>: <a href="http://www.semanticvalley.it/" target="_blank">Semantic Valley</a>, Piazza Manci 17 Povo (<a href="https://www.google.it/maps/place/46%C2%B003%2756.7%22N+11%C2%B009%2719.0%22E/@46.065747,11.155268,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">ingresso sul retro</a>).</p>
                 <p>Ci si trova qualche minuto prima al <a href="https://www.google.it/maps/place/46%C2%B003%2756.8%22N+11%C2%B009%2717.5%22E/@46.065766,11.154871,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=it" target="_blank">parcheggio della banca</a>
                 </p>
