--- a/manifesto.html
+++ b/manifesto.html
@@ -13,6 +13,7 @@
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/jugtaas.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
         <link href="css/justified-nav.css" rel="stylesheet">
@@ -48,13 +49,80 @@
 
             <!-- Jumbotron -->
             <div class="jumbotron">
-                <h1>Manifesto</h1>
-                <ul><li>Nessuno è nato imparato.</li>
-                    <li>L'universo Java è in espansione.</li>
-                    <li>Chiedere è lecito, rispondere cortesia.</li>
-                    <li>Insieme è divertente.</li>
-                    <li>Faccia a faccia è più divertente.</li>
-                </ul>
+                <h1>Chi Siamo</h1>
+                <ol class="faq">
+<li>
+<p class="question">
+Cos'e' il jugtaas?
+</p>
+<p class="answer">
+Java User Group Trentino-Alto Adige/Südtirol.
+</p>
+</li>
+
+<li>
+<p class="question">
+Si, ma che cos'e' il jugtaas?
+</p>
+<p class="answer">
+Un gruppo di utenti (che avario titolo hanno/o avranno a che fare con) java e che si ritrova più o meno periodicamente.
+</p>
+</li>
+
+<li>
+<p class="question">
+Costa qualche cosa unirsi al gruppo?
+</p>
+<p class="answer">
+No. Jugtaas NON è un ente fiscalmente riconosciuto, non ha cassa, ne bilancio. Non c'e' scopo di lucro, il tutto è su base volontaria. Il JUG Trento chiedeva senza obbligo solo 1 euro alla fine degli incontri, interamente devoluto al relatore per pagargli una pizza come simpatico ringraziamento meno simbolico per la fatica di preparare l'incontro.
+</p>
+</li>
+
+<li>
+<p class="question">
+Esiste un capo?
+</p>
+<p class="answer">
+No, esistono i coordinatori, che non sono eletti ma si auto infliggono dei lavoretti su base volontaria prestando il loro tempo a vari compiti di coordinamento e partecipazione alle attività del gruppo. Chiunque nel gruppo abbia energia, spirito di cooperazione e un po' di tempo da donare e costanza alzi la mano sarà bene accetto.
+</p>
+</li>
+
+<li>
+<p class="question">
+Centra qualche cosa con gli altri jug del mondo?
+</p>
+<p class="answer">
+Ni, di jug nel mondo ne esistono tanti, e pure in Italia ce ne sono un buon numero di attivi. Oracle ha una lista di iscrizione per essere considerati ufficiali. Come Jugtass pensiamo che sia utile richiederlo. Pur se alle volte veniamo considerati un gruppo clandestino, non abbiamo nulla da nascondere, anzi, è solo che "fare vetrina" costa energie e fino ad oggi nessuno si è preso questo impegno.
+</p>
+</li>
+
+<li>
+<p class="question">
+Solo prescelti sono ammessi alla presentazione di materiale agli incontri?
+</p>
+<p class="answer">
+No, anzi! Siamo sempre alla ricerca di persone "comuni" che vogliano condividere le loro anche piccole esperienze sul campo java. I nostri incontri NON sono lezioni, sono degli utili addendum e confronti tra piccoli sviluppatori che si orientano nel grande labirinto di librerie e nuove tecnologie. Questo è nocciolo dello spirito jug.
+</p>
+</li>
+
+<li>
+<p class="question">
+posso fare domande in mailing-list liberamente?
+</p>
+<p class="answer">
+Si, sempre nel rispetto delle persone ed evitando sterili guerre su chi o cosa è il migliore.
+</p>
+</li>
+
+<li>
+<p class="question">
+esiste una sede o punto di ritrovo stabile?
+</p>
+<p class="answer">
+Ahi me no, siamo sempre stati erranti ed ospitati in strutture da parte di enti (unica forma di sponsor) da questo il vincolo sul numero di partecipanti, o di orario o di spostamento con mezzi vari. Questo ha contribuito al senso di clandestinità del gruppo.
+</p>
+</li>
+                </ol>
             </div>
 
             <!-- Site footer -->
