--- a/mailinglist.html
+++ b/mailinglist.html
@@ -13,6 +13,7 @@
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="css/jugtaas.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
         <link href="css/justified-nav.css" rel="stylesheet">
