--- a/manifesto.html
+++ b/manifesto.html
@@ -49,7 +49,7 @@
 
             <!-- Jumbotron -->
             <div class="jumbotron">
-                <h1>Chi Siamo</h1>
+                <h1>Manifesto</h1>
                 <ol class="faq">
 <li>
 <p class="question">
