--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
             <!-- Jumbotron -->
             <div class="jumbotron">
+				<a href="incontri-prossimo.html" title="scopri il prossimo incontro">
 				<img src="img/jugtaas_logo_big.png"/>
+				</a>
                 <h2>Java User Group Trentino-Alto Adige/Südtirol</h2>
 
             </div>
