--- a/manifesto.html
+++ b/manifesto.html
@@ -44,6 +44,7 @@
                     <li><a href="utenti.html">Utenti</a></li>
                     <li class="active"><a href="manifesto.html">Manifesto</a></li>
                     <li><a href="contatti.html">Contatti</a></li>
+                    <li><a href="sponsor.html">Sponsor</a></li>
                 </ul>
             </div>
 
