--- a/sponsor.html
+++ b/sponsor.html
@@ -9,11 +9,10 @@
         <meta name="author" content="">
         <link rel="shortcut icon" href="img/favicon.png">
 
-        <title>JUG Trentino-Alto Adige/Südtirol - Mailing List</title>
+        <title>JUG Trentino-Alto Adige/Südtirol - Sponsor</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/jugtaas.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
         <link href="css/justified-nav.css" rel="stylesheet">
@@ -40,32 +39,46 @@
                 <ul class="nav nav-justified">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="incontri.html">Incontri</a></li>
-                    <li class="active"><a href="mailinglist.html">Maling List</a></li>
+                    <li><a href="mailinglist.html">Maling List</a></li>
                     <li><a href="utenti.html">Utenti</a></li>
                     <li><a href="manifesto.html">Manifesto</a></li>
                     <li><a href="contatti.html">Contatti</a></li>
-                    <li><a href="sponsor.html">Sponsor</a></li>
+                    <li class="active"><a href="sponsor.html">Sponsor</a></li>
                 </ul>
             </div>
 
             <!-- Jumbotron -->
             <div class="jumbotron">
-                <h1>Mailing List</h1>
-                <ul><li>La mailing list del gruppo è il punto di contatto sempre aperto. Il nome della lista nasce dall'idea di fondere la mailing list dei gruppi utenti Java di Bolzano e Trento, e di comprendere
-                        un area più grande. Quindi anche domande in tedesco sono beneaccette. </li>
-                    <li>Domande di ogni livello dai fondamentali a quelle molto specializzate sono gradite.</li>
-                    <li> Non è garatinta la risposta completa e corretta, ma è incredibile quanti siano pronti a darti una mano.</li>
-                    <li>I temi devono riguardare Java o tecnologie di uso comune per sviluppatori Java.</li>
-                    <li> La lista è soggetta a moderazione e non è tollerato spam commerciale e linguaggio offensivo.</li>
-                    <li> Sono ammesse offerte di lavoro, disponibilità freelance, presentazione di progetti privati.</li>
-                </ul>
-                <p class="lead"><b>Iscrizione: se possedete un account Google potete ricercare il gruppo jugtaa e cliccare sul pulsante "Unisciti al gruppo per pubblicare post" in alternativa potete scrivere ad uno dei moderatori.</b></p>
-                <p class="lead">Moderatori: Montesin Davide (d [at] vide.bz), Pedot Nicola (nicola.pedot [at] gmail.com)</p>
-                <p><a class="btn btn-lg btn-success" href="https://groups.google.com/forum/?fromgroups#!forum/jugtaa" role="button">Iscriviti alla Mailing List</a></p>
-
+                <h1>Sponsor</h1>
+                <p>Organizzazioni di vario genere che supportano il JUG TAAS</p>
             </div>
 
+            <!-- Featurette -->
 
+            <div class="row featurette">
+                <div class="col-md-5">
+                    <a href="http://www.semanticvalley.it/" target="_blank"><img class="featurette-image img-responsive" src="img/sponsors/semanticvalley.png" alt="Semantic Valley"></a>
+                </div>
+                <div class="col-sm-offset-2 col-md-5">
+					<p>Il Consorzio <a href="http://www.semanticvalley.it/">Semantic Valley</a> persegue il miglioramento della qualità della vita nell’era digitale tramite l’uso di tecnologie semantiche per l’organizzazione, il reperimento e l’integrazione delle informazioni sulla base dei loro contenuti. Ospita e fornisce gli spazi per gli incontri del JUG per quanto riguarda Trento.</p>
+                </div>
+            </div>
+            <div class="row featurette">
+                <div class="col-md-5">
+                    <a href="http://www.cross-library.com/" target="_blank"><img class="featurette-image img-responsive" src="img/sponsors/crosslibrary.png" alt="Cross Library"></a>
+                </div>
+                <div class="col-sm-offset-2 col-md-5">
+					<p><a href="http://www.cross-library.com/">Cross Library</a> fornisce soluzioni innovative per analizzare, rendere fruibile e valorizzare il patrimonio dei contenuti digitali, con tecnologie di Natural Language Processing. Si fa carico di alcuni aspetti organizzativi del JUG.</p>
+                </div>
+            </div>
+            <div class="row featurette">
+                <div class="col-md-5">
+                    <a href="https://www.jetbrains.com/" target="_blank"><img class="featurette-image img-responsive" src="img/sponsors/jetbrains.png" alt="Jet Brains"></a>
+                </div>
+                <div class="col-sm-offset-2 col-md-5">
+					<p><a href="https://www.jetbrains.com/">JetBrains</a> sviluppa degli IDE intelligenti per molti linguaggi e ambienti tra cui Java. Supporta il JUG fornendo ai suoi utenti alcune licenze software dei suoi prodotti.</p>
+                </div>
+            </div>
 
             <!-- Site footer -->
             <div class="footer">
@@ -79,4 +92,6 @@
             <!-- Placed at the end of the document so the pages load faster -->
 
         </div>
-    </body></html>
+
+    </body>
+</html>
