--- a/contatti.html
+++ b/contatti.html
@@ -43,6 +43,7 @@
                     <li><a href="utenti.html">Utenti</a></li>
                     <li><a href="manifesto.html">Manifesto</a></li>
                     <li class="active"><a href="contatti.html">Contatti</a></li>
+                    <li><a href="sponsor.html">Sponsor</a></li>
                 </ul>
             </div>
 
