--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,12 +43,13 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h2>Search Engine: Elastic Search</h2>
-                <h3>data: 28 Maggio 2015</h3>
-                <h3>orario: 18:30 - 20:30</h3>
-                <h3>Relatore: Nicola Vitucci</h3>
-                <p class="lead">Nicola Vitucci parlerà di <a href="">Elastic Search</a>, un progetto molto interessante scritto prevalentemente in Java e nato come diretto concorrente di Apache SOLR. Il tema è quello dei motori di ricerca e delle text analytics, anche se addirittura alcuni considerano lucene (il papà di Elastic Search) <a href="http://blog.parsely.com/post/1691/lucene/">uno dei primi data Store NoSQL</a>.</p>
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/ut4cu3vvw6vscv72" role="button">Iscriviti</a></p>
+                <h2>Docker: come "inscatolare" la propria app</h2>
+                <h3>data: <a href="http://doodle.com/r2mycsh9s5pmtvww">doodle in corso</a></h3>
+                <!--<h3>data: 28 Maggio 2015</h3>-->
+                <!--<h3>orario: 18:30 - 20:30</h3>-->
+                <h3>Relatori: Mario Alexandro Santini, Cristian Consonni</h3>
+                <p class="lead">Uno sguardo, teorico e pratico, sul mondo dei Linux Containers e sull'utilizzo di uno dei principali tool che li sfrutta: <a href="https://www.docker.com/" target="_blank">Docker</a>.</p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/r2mycsh9s5pmtvww" role="button">Iscriviti</a></p>
                 
                 <!--<p class="lead"><b>Orario</b>: da definirsi</p>-->
                 <p class="lead"><b>Lingua</b>: italiana</p>
