--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -44,9 +44,9 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h2>Docker: come "inscatolare" la propria app</h2>
-                <h3>data: <a href="http://doodle.com/r2mycsh9s5pmtvww">doodle in corso</a></h3>
-                <!--<h3>data: 28 Maggio 2015</h3>-->
-                <!--<h3>orario: 18:30 - 20:30</h3>-->
+                <!--<h3>data: <a href="http://doodle.com/r2mycsh9s5pmtvww">doodle in corso</a></h3>-->
+                <h3>data: 25 Giugno 2015</h3>
+                <h3>orario: 18:30 - 20:30</h3>
                 <h3>Relatori: Mario Alexandro Santini, Cristian Consonni</h3>
                 <p class="lead">Uno sguardo, teorico e pratico, sul mondo dei Linux Containers e sull'utilizzo di uno dei principali tool che li sfrutta: <a href="https://www.docker.com/" target="_blank">Docker</a>.</p>
                 <p><a class="btn btn-lg btn-success" href="http://doodle.com/r2mycsh9s5pmtvww" role="button">Iscriviti</a></p>
