--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,13 +43,17 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h2>Docker: come "inscatolare" la propria app</h2>
-                <!--<h3>data: <a href="http://doodle.com/r2mycsh9s5pmtvww">doodle in corso</a></h3>-->
+                <h2>Un'applicazione Android moderna: myFitness</h2>
+                <h3>data: <a href="http://doodle.com/8vvggf35ivchiy5b">doodle in corso</a></h3>
+                <!--
                 <h3>data: 25 Giugno 2015</h3>
                 <h3>orario: 18:30 - 20:30</h3>
-                <h3>Relatori: Mario Alexandro Santini, Cristian Consonni</h3>
-                <p class="lead">Uno sguardo, teorico e pratico, sul mondo dei Linux Containers e sull'utilizzo di uno dei principali tool che li sfrutta: <a href="https://www.docker.com/" target="_blank">Docker</a>.</p>
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/r2mycsh9s5pmtvww" role="button">Iscriviti</a></p>
+                -->
+                <h3>Relatori: Elia Rigo, Mattia Gasperotti</h3>
+                <p class="lead">Elia e Mattia, del GDG Trento, presenteranno la motivazione e gli aspetti più interessanti della loro applicazione Android: myFitness.</p>
+                <p>Verranno spiegate, tramite l'esempio dell'applicazione, le tecnologie più comuni nello sviluppo Android: Android Account Manager, API REST, Android DatabaseUtils.</p>
+                <p>Verranno infine mostrate tecnologie moderne quali Android Wear, l'integrazione di una app con Chromecast, QRCode, Text To Speech e Speech To Text.</p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/8vvggf35ivchiy5b" role="button">Iscriviti</a></p>
                 
                 <!--<p class="lead"><b>Orario</b>: da definirsi</p>-->
                 <p class="lead"><b>Lingua</b>: italiana</p>
