prossimo incontro, data e orario

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -44,9 +44,11 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h2>Un'applicazione Android moderna: myFitness</h2>
-                <h3>data: <a href="http://doodle.com/8vvggf35ivchiy5b">doodle in corso</a></h3>
                 <!--
-                <h3>data: 25 Giugno 2015</h3>
+                <h3>data: <a href="http://doodle.com/8vvggf35ivchiy5b">doodle in corso</a></h3>
+                -->
+                <!--
+                <h3>data: 29 Luglio 2015</h3>
                 <h3>orario: 18:30 - 20:30</h3>
                 -->
                 <h3>Relatori: Elia Rigo, Mattia Gasperotti</h3>
