--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -43,19 +43,17 @@
             <!-- Jumbotron -->
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
-                <h2>Un'applicazione Android moderna: myFitness</h2>
+                <h2>JUG Agosto - incontro con Simone Bordet</h2>
                 <!--
-                <h3>data: <a href="http://doodle.com/8vvggf35ivchiy5b">doodle in corso</a></h3>
+                <h3>data: <a href="http://doodle.com/psqy4phaeexawr7e">doodle in corso</a></h3>
                 -->
 
-                <h3>data: 29 Luglio 2015</h3>
-                <h3>orario: 18:30 - 20:30</h3>
+                <h3>data: 19 Agosto 2015</h3>
+                <h3>orario: 19:00 - 21:00</h3>
                 
-                <h3>Relatori: Elia Rigo, Mattia Gasperotti</h3>
-                <p class="lead">Elia e Mattia, del GDG Trento, presenteranno la motivazione e gli aspetti più interessanti della loro applicazione Android: myFitness.</p>
-                <p>Verranno spiegate, tramite l'esempio dell'applicazione, le tecnologie più comuni nello sviluppo Android: Android Account Manager, API REST, Android DatabaseUtils.</p>
-                <p>Verranno infine mostrate tecnologie moderne quali Android Wear, l'integrazione di una app con Chromecast, QRCode, Text To Speech e Speech To Text.</p>
-                <p><a class="btn btn-lg btn-success" href="http://doodle.com/8vvggf35ivchiy5b" role="button">Iscriviti</a></p>
+                <h3>Relatore: Simone Bordet</h3>
+                <p class="lead">Simone Bordet, lead developer di Intalio e committer di importanti progetti opensurce (Jetty, CometD, MX4J, Foxtrot, LiveTribe, ...) ci racconterà le sue ultime esperienze con <a href="http://www.reactive-streams.org/">reactive-streams</a> e <a href="http://www.oracle.com/webfolder/technetwork/tutorials/obe/java/G1GettingStarted/index.html">G1 garbage collector</a>.</p>
+                <p><a class="btn btn-lg btn-success" href="http://doodle.com/psqy4phaeexawr7e" role="button">Iscriviti</a></p>
                 
                 <!--<p class="lead"><b>Orario</b>: da definirsi</p>-->
                 <p class="lead"><b>Lingua</b>: italiana</p>
