fissata data nuovo incontro

--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -44,12 +44,13 @@
             <div class="jumbotron">
                 <h2>Prossimo incontro</h2>
                 <h2>NoSQL: introduzione ai GraphDB ed esperienze con OrientDB</h2>
-                <h3>data: <a href="http://doodle.com/poll/xfgxwfisnnnf9kv5">doodle in corso</a></h3>
 
-<!--
-                <h3>data: 19 Agosto 2015</h3>
-                <h3>orario: 19:00 - 21:00</h3>
--->       
+                <!--
+                <h3>data: <a href="http://doodle.com/poll/xfgxwfisnnnf9kv5">doodle in corso</a></h3>
+                -->
+                <h3>data: 3 Novembre 2015</h3>
+                <h3>orario: 18:30 - 20:30</h3>
+
                 <h3>Relatore: Riccardo Tasso</h3>
                 <p class="lead">Nel panorama NoSQL una delle famiglie di database che sta riscuotendo maggior interesse è quella dei GraphDB.</p>
 
@@ -57,8 +58,8 @@
 
                 <p class="lead">Si parlerà poi di OrientDB, un importante progetto open source di GraphDB, introducendone le caratteristiche più interessanti e quelle più avanzate. Verranno discussi sia aspetti teorici che pratici, con esempi di utilizzo ed esperienze sul campo.</p></p>
                
-                <p class="lead"><b>Luogo</b>: piazza Fiera, maggiori dettagli a breve</p>
-                <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi al doodle. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>
+                <p class="lead"><b>Luogo</b>: <a href="https://www.google.it/maps/place/Piazza+de+Fiera,+38122+Trento/@46.0649748,11.1242527,3a,75y,162.09h,85.47t/data=!3m7!1e1!3m5!1srjO4ZcUkcI-IFc1nx4oJhg!2e0!6s%2F%2Fgeo3.ggpht.com%2Fcbk%3Fpanoid%3DrjO4ZcUkcI-IFc1nx4oJhg%26output%3Dthumbnail%26cb_client%3Dmaps_sv.tactile.gps%26thumb%3D2%26w%3D203%26h%3D100%26yaw%3D107.24782%26pitch%3D0!7i13312!8i6656!4m2!3m1!1s0x478276b4aa3e9763:0x4a9f21273faf8b8f?hl=it">Istituto Artigianelli di Piazza Fiera</a></p>
+                <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi al <a href="http://doodle.com/poll/xfgxwfisnnnf9kv5">doodle</a>. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>
                 <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
                 <p class="lead"><b>Costo</b>: 1€; da tradizione i partecipanti sono invitati a
                     pagare un euro, versato direttamente al relatore per offrirgli la
