--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -62,7 +62,7 @@
                 -->
                 <p class="lead"><b>Luogo</b>: <a href="https://www.google.it/maps/place/TIS+innovation+park/@46.4821393,11.2953851,13z/data=!4m7!1m4!3m3!1s0x47829c37496afbd1:0xd12f1cb6b537d7a7!2sVia+Werner+Von+Siemens,+19,+39100+Bolzano+BZ!3b1!3m1!1s0x47829c30c467cbf1:0x372add8164eab172?hl=it">TIS Innovation Park di Bolzano</a></p>
                 <!--<p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi al <a href="http://doodle.com/poll/xfgxwfisnnnf9kv5">doodle</a>. In caso di rinuncia vi preghiamo di togliere l'iscrizione dal doodle, visto che i posti sono limitati.</p>-->
-                <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi su <a href=https://plus.google.com/events/c9hea5l24dacv1hkc8i42rl59os">google+</a>.</p>
+                <p class="lead"><b>Iscrizione</b>: è sufficiente iscriversi su <a href="https://plus.google.com/events/c9hea5l24dacv1hkc8i42rl59os">google+</a>.</p>
                 
                 <!-- <p class="lead">Live Streaming: <a href="https://www.youtube.com/watch?v=hqy0YhqPLek" target="_blank">per la prima volta l'evento in Live Streaming su YouTube</a> <sup class="alert-danger">novità beta</sup></p> -->
                 <!--
