--- a/incontri.html
+++ b/incontri.html
@@ -73,7 +73,7 @@
                                 <h2>NoSQL: introduzione ai GraphDB ed esperienze con OrientDB</h2>
                                 <h3>Relatore: Riccardo Tasso</h3>
                                 <p><i>Artigianelli, Trento</i></p>
-                                <p>In questo talk Riccardo si è parlato delle peculiarità dei GraphDB e in particolare dello standard de facto in Java Apache Tinkerpop e di
+                                <p>In questo talk Riccardo ha parlato delle peculiarità dei GraphDB e in particolare dello standard de facto in Java Apache Tinkerpop e di
                                 OrientDB, un importante progetto open source di GraphDB, introducendone le caratteristiche più interessanti e quelle più avanzate. 
                                 Sono stati discussi sia aspetti teorici che pratici, con esempi di utilizzo ed esperienze sul campo.                                
                                 </p>
