--- a/jday/index.html
+++ b/jday/index.html
@@ -87,11 +87,11 @@
 
    			<!-- Begin Signup -->
         <div class="action">
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alle presentazioni <br>20 posti</a>
+            <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni <br>20 posti</a>
             <a href="#quicks"> <h5>informazioni</h5></a>
          </div>
          <div class="action">
-             <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al contest <br>20 posti
+             <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest <br>20 posti
              </a>
              <a href="#sprint"> <h5>informazioni</h5></a>
           </div>
@@ -162,11 +162,11 @@
 			      <h2>Vieni ad incontrarci</h2>
 
             <div class="action">
-  			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alla mattina</a>
+  			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alla mattina</a>
   	         	</div>
               <br>
             <div class="action">
-  			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al pomeriggio</a>
+  			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al pomeriggio</a>
   	         	</div>
 
 			   </div>
@@ -263,7 +263,7 @@
               I primi venti registrati saranno avvisati via email.
               In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
 					<div class="action">
-			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alle presentazioni</a>
+			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni</a>
 	         	</div>
 
 			   </div>
@@ -361,7 +361,7 @@
 
 
 					<div class="action">
-			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al contest</a>
+			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest</a>
 	         	</div>
 
 			   </div>
